Call cros lint and surface its findings.
This is an initial POC. It was tested on C++ files.

BUG=b:214322467
TEST=lint errors on bad spacing in C++

Change-Id: Ic1e5f1392a694955748f2d4952f3afa2b655b388
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/ide_tooling/+/3414318
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -18,7 +18,8 @@
 		"onCommand:cros-ide.refreshCrosfleet",
 		"onCommand:cros-ide.addFleetHost",
 		"onView:static-devices",
-		"onView:fleet-devices"
+		"onView:fleet-devices",
+		"onLanguage:cpp"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
