--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -164,6 +164,7 @@
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "eslint": "^8.7.0",
+    "eslint-config-google": "^0.14.0",
     "glob": "^7.1.7",
     "mocha": "^9.1.3",
     "typescript": "^4.5.5",
