--- a/PRESUBMIT.cfg
+++ b/PRESUBMIT.cfg
@@ -3,6 +3,7 @@
 
 [Hook Scripts]
 cros lint = cros lint ${PRESUBMIT_FILES}
+cros-ide = ./cros-ide/test.sh
 
 [Hook Overrides]
 cros_license_check: true
