CodeSearch: open current file and search for selection.
BUG=b:209704848
TEST=https://screenshot.googleplex.com/4cDHsMUnmv7GFGp.png

Change-Id: I668f13e3db23fe60ac0d6d01af57c70b2a384f2f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/ide_tooling/+/3424500
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -18,6 +18,8 @@
     "onCommand:cros-ide.connectToHostForShell",
     "onCommand:cros-ide.refreshCrosfleet",
     "onCommand:cros-ide.addFleetHost",
+    "onCommand:cros-ide.codeSearchOpenCurrentFile",
+    "onCommand:cros-ide.codeSearchSearchForSelection",
     "onView:static-devices",
     "onView:fleet-devices",
     "onView:boards-packages",
@@ -60,6 +62,14 @@
         "command": "cros-ide.refreshBoardsPackages",
         "title": "CrOS: Refresh Boards and Packages",
         "icon": "$(refresh)"
+      },
+      {
+        "command": "cros-ide.codeSearchOpenCurrentFile",
+        "title": "Open in Code Search"
+      },
+      {
+        "command": "cros-ide.codeSearchSearchForSelection",
+        "title": "Search for selection in Code Search"
       }
     ],
     "viewsContainers": {
@@ -88,6 +98,14 @@
       ]
     },
     "menus": {
+      "editor/context": [
+        {
+          "command": "cros-ide.codeSearchOpenCurrentFile"
+        },
+        {
+          "command" : "cros-ide.codeSearchSearchForSelection"
+        }
+      ],
       "view/title": [
         {
           "command": "cros-ide.addHost",
