Lint Shell and Python with cros lint.
BUG=b:214322467
TEST=https://screenshot.googleplex.com/nEKpC62DADyg3V5.png

Change-Id: I3ca85649b6bc56a977daabd71c22f9155117a347
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/ide_tooling/+/3426315
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -25,7 +25,9 @@
     "onView:static-devices",
     "onView:fleet-devices",
     "onView:boards-packages",
-    "onLanguage:cpp"
+    "onLanguage:cpp",
+    "onLanguage:python",
+    "onLanguage:shellscript"
   ],
   "main": "./dist/extension.js",
   "contributes": {
