--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -295,6 +295,7 @@
     "@types/glob": "^7.1.4",
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.17.6",
+    "@types/uuid": "^8.3.4",
     "@types/vscode": "^1.60.0",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
@@ -307,5 +308,8 @@
     "typescript": "^4.5.5",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
