--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -268,6 +268,11 @@
           "type": "boolean",
           "description": "Enable pseudonymous metrics collection. Randomly generated unique user ID resets automatically every 180 days. You can also reset it anytime by running the command in the Command Palette.",
           "default": false
+        },
+        "cros-ide.metrics.showMessage": {
+          "type": "boolean",
+          "description": "Show information on metrics collection.",
+          "default": true
         }
       }
     },
