cros-ide: Introduce views
"views" directory will hold TypeScript source code to be loaded in
WebView. We need to separate them from the extension source code
because we build them for different targets (web vs. node).

BUG=b:232317657
TEST=npm run build

Change-Id: Iebcf82ef8481461b1a7595da031ab74f94b44b91
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3649391
Commit-Queue: Shuhei Takahashi <nya@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>
Tested-by: Shuhei Takahashi <nya@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -352,6 +352,7 @@
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "@vscode/test-electron": "^1.6.2",
+    "copy-webpack-plugin": "^10.2.4",
     "eslint": "^7",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.26.0",
