--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -324,8 +324,10 @@
     "@types/jasmine": "^4.0.0",
     "@types/node": "^14.17.6",
     "@types/semver": "^7.3.9",
+    "@types/ssh2": "^0.5.52",
     "@types/uuid": "^8.3.4",
     "@types/vscode": "^1.60.0",
+    "@types/vscode-webview": "^1.57.0",
     "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
@@ -337,6 +339,7 @@
     "gts": "^3.1.0",
     "jasmine": "^4.1.0",
     "js-green-licenses": "^3.0.1",
+    "ssh2": "^1.10.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "vscode-tmgrammar-test": "^0.1.1",
