cros-ide: syntax for process environment stanzas.
See https://upstart.ubuntu.com/cookbook/#stanzas-by-category for more
info.

Some stanza, which are not used in platform2, were omitted.

BUG=b:230052562
TEST=https://screenshot.googleplex.com/54s9mhkuBUA87fN.png
TEST=vscode-tmgrammar-test -g upstart.tmLanguage.json
upstart-syntax-test.conf

Change-Id: Idaef373e6a8a34ef017fdcaf3f3b78001d983248
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3653880
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>

--- a/cros-ide/languages/upstart-syntax-test.conf
+++ b/cros-ide/languages/upstart-syntax-test.conf
@@ -104,3 +104,27 @@ respawn limit 10 5
 respawn limit unlimited
 # <------------- keyword.other.respawn-limit.upstart
 #             ^^^^^^^^^ constant.language.unlimited.upstart
+
+console none
+# <------------ keyword.other.console.upstart
+
+limit as 30000000 unlimited
+# <----- keyword.other.limit.upstart
+#     ^^ entity.name.other.resource.upstart
+#        ^^^^^^^^ constant.numeric.upstart
+#                 ^^^^^^^^^ constant.language.unlimited.upstart
+
+nice 10
+# <---- keyword.other.nice.upstart
+#    ^^ constant.numeric.upstart
+
+oom score never
+# <--------- keyword.other.oom-score.upstart
+#         ^^^^^ constant.language.never.upstart
+
+oom score -100
+# <--------- keyword.other.oom-score.upstart
+#         ^^^^ constant.numeric.upstart
+
+umask
+# <----- keyword.other.umask.upstart
