cros-ide: syntax for instance stanza in upstart.
See https://upstart.ubuntu.com/cookbook/#instance for details.

BUG=b:230052562
TEST=https://screenshot.googleplex.com/8RLuiepix59Ln7f.png
TEST=vscode-tmgrammar-test -g upstart.tmLanguage.json
upstart-syntax-test.conf

Change-Id: I03e48a8f83dff7f073d234b34290d3476519ebe2
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3653881
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>

--- a/cros-ide/languages/upstart-syntax-test.conf
+++ b/cros-ide/languages/upstart-syntax-test.conf
@@ -128,3 +128,16 @@ oom score -100
 
 umask
 # <----- keyword.other.umask.upstart
+
+instance $NAME
+# <-------- keyword.other.instance.upstart
+#        ^^^^^ variable.other.instance.upstart
+
+instance ${NAME}
+# <-------- keyword.other.instance.upstart
+#        ^^^^^^^ variable.other.instance.upstart
+
+# dollar sign is mandatory, no highlighting without it
+instance NAME
+# <-------- - keyword.other.instance.upstart
+#        ^^^^ - variable.other.instance.upstart
