cros-ide: Make fast C++ compdb generation the default
BUG=b:233835585
TEST=manually

Change-Id: I104ab8515a21e8446493e4342cae103de3385242
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3663462
Tested-by: Keigo Oka <oka@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -223,9 +223,9 @@
           "description": "Enable Test Coverage (incomplete)",
           "default": false
         },
-        "cros-ide.underDevelopment.fasterCppXrefGeneration": {
+        "cros-ide.underDevelopment.legacyCppXrefGeneration": {
           "type": "boolean",
-          "description": "Faster compilation database generation for C++ xrefs (incomplete)",
+          "description": "Switch back to legacy compilation database generation for C++ xrefs (deprecated)",
           "default": false
         },
         "cros-ide.dutManager.hosts": {
