--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -13,6 +13,7 @@
     "vscode": "^1.63.0",
     "node": ">=14.0.0"
   },
+  "icon": "media/cros-device.png",
   "categories": [
     "Linters",
     "Other",
