cros-ide: Update wording
Because our code lives in public repository, prefer ChromiumOS over
ChromeOS.

BUG=b:216583946
TEST=None

Change-Id: Ifb4caa4672ba7a3733c5d52c57c44b5279dccdf0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3674991
Commit-Queue: Keigo Oka <oka@chromium.org>
Reviewed-by: Eric Lok <lokeric@google.com>
Tested-by: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cros-ide",
   "displayName": "CrOS IDE",
-  "description": "Chrome OS Development",
+  "description": "ChromiumOS Development",
   "version": "0.0.10",
   "publisher": "Google",
   "author": {
