--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -337,6 +337,7 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "vscode-tmgrammar-test": "^0.1.1",
+    "vscode-uri": "^3.0.3",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
   }
