cros-ide: Add codeSearchCopyCurrentFile command
Add a command to copy link to current line to clipboard. Factor out the
common code with codeSearchOpenCurrentFile.

BUG=None
TEST=manual

Change-Id: I60a118475debed082f2b11f704f5abbd9700e1aa
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3687287
Reviewed-by: Tomasz Tylenda <ttylenda@chromium.org>
Commit-Queue: Evan Benn <evanbenn@chromium.org>
Tested-by: Evan Benn <evanbenn@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -27,6 +27,7 @@
     "onCommand:cros-ide.deviceManagement.connectToDeviceForShell",
     "onCommand:cros-ide.refreshBoardsPackages",
     "onCommand:cros-ide.codeSearchOpenCurrentFile",
+    "onCommand:cros-ide.codeSearchCopyCurrentFile",
     "onCommand:cros-ide.codeSearchSearchForSelection",
     "onCommand:cros-ide.crosWorkonStart",
     "onCommand:cros-ide.crosWorkonStop",
@@ -81,6 +82,11 @@
         "command": "cros-ide.codeSearchOpenCurrentFile",
         "category": "CrOS",
         "title": "Open in Code Search"
+      },
+      {
+        "command": "cros-ide.codeSearchCopyCurrentFile",
+        "category": "CrOS",
+        "title": "Copy Code Search URL to clipboard"
       },
       {
         "command": "cros-ide.codeSearchSearchForSelection",
@@ -150,6 +156,9 @@
       "editor/context": [
         {
           "command": "cros-ide.codeSearchOpenCurrentFile"
+        },
+        {
+          "command": "cros-ide.codeSearchCopyCurrentFile"
         },
         {
           "command": "cros-ide.codeSearchSearchForSelection"
