cros-ide: Tricium spellchecker.
POC for integration with Tricium spellchecker. The new feature is under
a flag and requires a locally built spellchecker (see the bug).

BUG=b:217287367
TEST=https://screenshot.googleplex.com/4xDhjoQUnKSVdTf.png

Change-Id: Id475431c75e949a4292c827dc8633fce2ab9f6ed
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3697646
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -226,7 +226,7 @@
       "editor/title": [
         {
           "command": "cros-ide.deviceManagement.runTastTests",
-          "when": "config.cros-ide.underDevelopment.runTastTests && resourcePath =~ /\/src\/platform\/tast-tests[^\/]*\/src\/chromiumos\/tast\/(local|remote)\/bundles\/[^\/]+\/[^\/]+\/[^\/]+.go$/",
+          "when": "config.cros-ide.underDevelopment.runTastTests && resourcePath =~ //src/platform/tast-tests[^/]*/src/chromiumos/tast/(local|remote)/bundles/[^/]+/[^/]+/[^/]+.go$/",
           "group": "navigation"
         }
       ],
@@ -397,6 +397,11 @@
           "type": "boolean",
           "description": "Enable running tast tests (incomplete)",
           "default": false
+        },
+        "cros-ide.underDevelopment.triciumSpellcheckerPath": {
+          "type": "string",
+          "description": "Path to Tricium Spellchecker executable (b/217287367).",
+          "default": ""
         },
         "cros-ide.deviceManagement.devices": {
           "type": "array",
