cros-ide: Enable "Flash Image to Device" command by default
BUG=b:238966628
TEST=https://screenshot.googleplex.com/8da68zB6cAAphTW

Change-Id: I4dddf4e1fdf816413f52141db7c13a1ed4a2ad14
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3762018
Tested-by: Shuhei Takahashi <nya@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Shuhei Takahashi <nya@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -81,8 +81,7 @@
         "command": "cros-ide.deviceManagement.flashPrebuiltImage",
         "category": "CrOS",
         "title": "Flash Image to Device",
-        "icon": "$(cloud-download)",
-        "enablement": "config.cros-ide.underDevelopment.deviceManagement"
+        "icon": "$(cloud-download)"
       },
       {
         "command": "cros-ide.deviceManagement.crosfleetLogin",
@@ -248,12 +247,12 @@
         },
         {
           "command": "cros-ide.deviceManagement.flashPrebuiltImage",
-          "when": "view == devices && viewItem =~ /^device-/ && config.cros-ide.underDevelopment.deviceManagement",
+          "when": "view == devices && viewItem =~ /^device-/",
           "group": "inline@3"
         },
         {
           "command": "cros-ide.deviceManagement.flashPrebuiltImage",
-          "when": "view == devices && viewItem =~ /^device-/ && config.cros-ide.underDevelopment.deviceManagement",
+          "when": "view == devices && viewItem =~ /^device-/",
           "group": "2_operation@1"
         },
         {
