cros-ide: Enable crosfleet leasing by default
BUG=b:238966800
TEST=https://screenshot.googleplex.com/xq8jNyHRwjXTwiq
TEST=https://screenshot.googleplex.com/4LkFVuzeFLUYmVz

Change-Id: I81a438445867576a7ecdaad892d746b6ee9b744f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3762016
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Shuhei Takahashi <nya@chromium.org>
Tested-by: Shuhei Takahashi <nya@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -86,22 +86,19 @@
       {
         "command": "cros-ide.deviceManagement.crosfleetLogin",
         "category": "CrOS",
-        "title": "Log in to crosfleet",
-        "enablement": "config.cros-ide.underDevelopment.deviceManagement"
+        "title": "Log in to crosfleet"
       },
       {
         "command": "cros-ide.deviceManagement.refreshLeases",
         "category": "CrOS",
         "title": "Refresh Leased Device List",
-        "icon": "$(refresh)",
-        "enablement": "config.cros-ide.underDevelopment.deviceManagement"
+        "icon": "$(refresh)"
       },
       {
         "command": "cros-ide.deviceManagement.addLease",
         "category": "CrOS",
         "title": "Lease a Device",
-        "icon": "$(add)",
-        "enablement": "config.cros-ide.underDevelopment.deviceManagement"
+        "icon": "$(add)"
       },
       {
         "command": "cros-ide.deviceManagement.copyHostname",
