--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -25,6 +25,7 @@
     "onCommand:cros-ide.deviceManagement.deleteDevice",
     "onCommand:cros-ide.deviceManagement.connectToDeviceForScreen",
     "onCommand:cros-ide.deviceManagement.connectToDeviceForShell",
+    "onCommand:cros-ide.deviceManagement.openSystemLogViewer",
     "onCommand:cros-ide.deviceManagement.flashPrebuiltImage",
     "onCommand:cros-ide.deviceManagement.crosfleetLogin",
     "onCommand:cros-ide.deviceManagement.refreshLeases",
@@ -65,6 +66,12 @@
         "category": "CrOS",
         "title": "Connect to Device (Shell)",
         "icon": "$(terminal)"
+      },
+      {
+        "command": "cros-ide.deviceManagement.openSystemLogViewer",
+        "category": "CrOS",
+        "title": "Connect to System Log Viewer",
+        "icon": "$(remote-explorer)"
       },
       {
         "command": "cros-ide.deviceManagement.addDevice",
@@ -263,6 +270,16 @@
           "group": "inline@3"
         },
         {
+          "command": "cros-ide.deviceManagement.openSystemLogViewer",
+          "when": "view == devices && viewItem =~ /^device-/ && config.cros-ide.underDevelopment.systemLogViewer",
+          "group": "inline@4"
+        },
+        {
+          "command": "cros-ide.deviceManagement.openSystemLogViewer",
+          "when": "view == devices && viewItem =~ /^device-/ && config.cros-ide.underDevelopment.systemLogViewer",
+          "group": "1_connect@4"
+        },
+        {
           "command": "cros-ide.deviceManagement.flashPrebuiltImage",
           "when": "view == devices && viewItem =~ /^device-/",
           "group": "2_operation@1"
@@ -392,9 +409,9 @@
           "description": "Enable running tast tests (incomplete)",
           "default": false
         },
-        "cros-ide.underDevelopment.triciumSpellchecker": {
+        "cros-ide.underDevelopment.systemLogViewer": {
           "type": "boolean",
-          "description": "Enable Tricium Spellchecker (b/217287367).",
+          "description": "Enable display system log viewer (incomplete)",
           "default": false
         },
         "cros-ide.deviceManagement.devices": {
