--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -509,6 +509,7 @@
     "gts": "^3.1.0",
     "jasmine": "^4.1.0",
     "js-green-licenses": "^3.0.1",
+    "ovsx": "^0.5.1",
     "ssh2": "^1.10.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
