cros-ide: introduce config settings to platform ec builds.
BUG=b:236389226
TEST=opened settings and verified that new items are shown

Change-Id: Ib03a14f99cc6ffdeb8b210287555e4bc3dc86325
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3867217
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>
Reviewed-by: Andrea Grandi <agrandi@google.com>
Reviewed-by: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -384,6 +384,28 @@
           "description": "Disable the new logic to automatically detect a Portage package from the filepath, and use hardcoded mapping instead",
           "default": false
         },
+        "cros-ide.platformEC.board": {
+          "type": "string",
+          "description": "EC target, for example, bloonchipper."
+        },
+        "cros-ide.platformEC.mode": {
+          "type": "string",
+          "enum": [
+            "RW",
+            "RO"
+          ],
+          "description": "Firmware mode.",
+          "default": "RW"
+        },
+        "cros-ide.platformEC.build": {
+          "type": "string",
+          "enum": [
+            "Makefile",
+            "Zephyr"
+          ],
+          "description": "Build system.",
+          "default": "Makefile"
+        },
         "cros-ide.underDevelopment.crosFormat": {
           "type": "boolean",
           "description": "Format files with 'cros format' (under development)",
