cros-ide: bringing back triciumSpellchecker setting
It was mistakenly deleted in crrev.com/c/3844837

BUG=none
TEST=npm t

Change-Id: I1d4614763eb72430d51d1ecd975bdc344662f15f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3874311
Auto-Submit: Tomasz Tylenda <ttylenda@chromium.org>
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>
Commit-Queue: Qijiang Yūki Ishii <fqj@google.com>
Reviewed-by: Qijiang Yūki Ishii <fqj@google.com>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -414,6 +414,11 @@
           "description": "Enable display system log viewer (incomplete)",
           "default": false
         },
+        "cros-ide.underDevelopment.triciumSpellchecker": {
+          "type": "boolean",
+          "description": "Enable Tricium Spellchecker (b/217287367).",
+          "default": false
+        },
         "cros-ide.deviceManagement.devices": {
           "type": "array",
           "scope": "machine-overridable",
