cros-ide: add a command to return leased devices
Abandoning a lease is an asynchronous operation, so the device will
still appear in device manager after a refresh. We will fix it in a
follow up change.

BUG=b:246230239
TEST=https://screenshot.googleplex.com/ssPT8EahY2HoKkF.png

Change-Id: Iff03f8afe54ae64509cc94d68ead11fe635bbc2f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3881320
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>
Reviewed-by: Shuhei Takahashi <nya@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -30,6 +30,7 @@
     "onCommand:cros-ide.deviceManagement.crosfleetLogin",
     "onCommand:cros-ide.deviceManagement.refreshLeases",
     "onCommand:cros-ide.deviceManagement.addLease",
+    "onCommand:cros-ide.deviceManagement.abandonLease",
     "onCommand:cros-ide.deviceManagement.copyHostname",
     "onCommand:cros-ide.deviceManagement.runTastTests",
     "onCommand:cros-ide.refreshBoardsPackages",
@@ -107,6 +108,13 @@
         "category": "CrOS",
         "title": "Lease a Device",
         "icon": "$(add)"
+      },
+      {
+        "command": "cros-ide.deviceManagement.abandonLease",
+        "category": "CrOS",
+        "title": "Abandon the Device",
+        "icon": "$(close)",
+        "enablement": "config.cros-ide.underDevelopment.deviceManagement"
       },
       {
         "command": "cros-ide.deviceManagement.copyHostname",
@@ -303,6 +311,16 @@
           "command": "cros-ide.deviceManagement.addLease",
           "when": "view == devices && viewItem == category-leased",
           "group": "inline@1"
+        },
+        {
+          "command": "cros-ide.deviceManagement.abandonLease",
+          "when": "view == devices && viewItem == device-leased && config.cros-ide.underDevelopment.deviceManagement",
+          "group": "inline@9"
+        },
+        {
+          "command": "cros-ide.deviceManagement.abandonLease",
+          "when": "view == devices && viewItem == device-leased && config.cros-ide.underDevelopment.deviceManagement",
+          "group": "9_delete"
         },
         {
           "command": "cros-ide.deviceManagement.refreshLeases",
