cros-ide: Enable template insertion by default
BUG=b:229179772
FIXED=b:229179772
TEST=npm t

Change-Id: Ib2b1d108c432b6d6e6c2de9a32833243985a1ea6
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3898267
Reviewed-by: Tomasz Tylenda <ttylenda@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Tested-by: Keigo Oka <oka@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -469,7 +469,7 @@
         "cros-ide.underDevelopment.newFileTemplate": {
           "type": "boolean",
           "description": "Enable template insertion for a new file",
-          "default": false
+          "default": true
         },
         "cros-ide.deviceManagement.devices": {
           "type": "array",
