cros-ide: Move system log viewer to context menu
Real estate of device tree view is quite limited, so we can't afford
an inline icon for the system log viewer yet. Instead we will show it
in the right-click context menu for now.

BUG=b:250783076
TEST=https://screenshot.googleplex.com/BJpkAAWM4hCPKJG

Change-Id: I40e04675fae68b41752fc73f69b8ce05540c566b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3935689
Commit-Queue: Shuhei Takahashi <nya@chromium.org>
Reviewed-by: Keigo Oka <oka@chromium.org>
Tested-by: Shuhei Takahashi <nya@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -90,8 +90,7 @@
       {
         "command": "cros-ide.deviceManagement.openSystemLogViewer",
         "category": "CrOS",
-        "title": "Connect to System Log Viewer",
-        "icon": "$(remote-explorer)"
+        "title": "Open System Log Viewer"
       },
       {
         "command": "cros-ide.deviceManagement.addDevice",
@@ -296,19 +295,14 @@
           "group": "inline@3"
         },
         {
-          "command": "cros-ide.deviceManagement.openSystemLogViewer",
-          "when": "view == devices && viewItem =~ /^device-/ && config.cros-ide.underDevelopment.systemLogViewer",
-          "group": "inline@4"
-        },
-        {
-          "command": "cros-ide.deviceManagement.openSystemLogViewer",
-          "when": "view == devices && viewItem =~ /^device-/ && config.cros-ide.underDevelopment.systemLogViewer",
-          "group": "1_connect@4"
-        },
-        {
           "command": "cros-ide.deviceManagement.flashPrebuiltImage",
           "when": "view == devices && viewItem =~ /^device-/",
           "group": "2_operation@1"
+        },
+        {
+          "command": "cros-ide.deviceManagement.openSystemLogViewer",
+          "when": "view == devices && viewItem =~ /^device-/ && config.cros-ide.underDevelopment.systemLogViewer",
+          "group": "2_operation@2"
         },
         {
           "command": "cros-ide.deviceManagement.copyHostname",
