cros-ide: Move boards and packages under chromiumos/
BUG=b:251746208
TEST=repo upload
TEST=manually checked boards and packages are shown when cros-ide is
opened, and the command to refresh boards and packages works.
TEST=manually checked boards and packages are not shown when
non-ChromeOS workspace is opened and it shows a message to let user
open chromiumos directory https://screenshot.googleplex.com/MT7YAjm8XJaBSC8
the command to refresh boards and packages are not shown.

Change-Id: Iddf6e7580a93d5a8ab48472131ba6959b54c20e9
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3945334
Tested-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>
Reviewed-by: Tomasz Tylenda <ttylenda@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -149,7 +149,8 @@
         "command": "cros-ide.refreshBoardsPackages",
         "category": "CrOS",
         "title": "Refresh Boards and Packages",
-        "icon": "$(refresh)"
+        "icon": "$(refresh)",
+        "enablement": "cros-ide.chrootPath"
       },
       {
         "command": "cros-ide.codeSearchOpenCurrentFile",
