cros-ide: Use esbuild-loader to speed up build
This patch makes `npm run build` 3x faster (from 11s to 3.5s) by
replacing ts-loader with https://www.npmjs.com/package/esbuild-loader

A trailing comma in views/tsconfig.json is removed so that it can be
read as proper JSON from the config.

BUG=b:253525695
FIXED=b:253525695
TEST=repo upload
TEST=no behaviour changes are seen (checked VNC view, boards and
packages, IDE status, and spellchecker). Tested it with
./dev_install.sh and Run Extension.
TEST=breakpoint works on Run Extension
TEST=Error stack trace on Run Extension shows JS filepath (same as
before)

Change-Id: I4b65d15379d85852472ef10c46bd1ec2e60110e8
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3955142
Tested-by: Keigo Oka <oka@chromium.org>
Reviewed-by: Tomasz Tylenda <ttylenda@chromium.org>
Commit-Queue: Keigo Oka <oka@chromium.org>

--- a/cros-ide/views/tsconfig.json
+++ b/cros-ide/views/tsconfig.json
@@ -10,7 +10,7 @@
     "sourceMap": true,
     "rootDirs": ["src", "../src"],
     "strict": true,
-    "jsx": "react-jsx",
+    "jsx": "react-jsx"
   },
   "include": [
     "src"
