--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -664,6 +664,7 @@
     "@vscode/test-electron": "^2.1.3",
     "commander": "^9.4.0",
     "copy-webpack-plugin": "^10.2.4",
+    "esbuild-loader": "^2.20.0",
     "eslint": "^7",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.26.0",
