--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -652,6 +652,11 @@
     "vscode:prepublish": "npm run build-release"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.103",
+    "@mui/material": "^5.10.9",
     "@novnc/novnc": "^1.3.0",
     "date-fns": "^2.28.0",
     "glob": "^7.1.7",
