cros-ide: AddOwnedDevice view
The view/UI for adding an owned device, implemented in a React-enabled
.tsx file (which has embedded HTML elements via JSX). See design doc:
https://docs.google.com/document/d/1yVmW-ju9mpaSXmIVdSHE9keC5LMDuaRXWU7aax699PE/edit#heading=h.17wg41voij6q

BUG=b:246445868
TEST=manually

Change-Id: I04a5f9d335953b9e2d941a8e977253655091f214
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3931304
Auto-Submit: Joel Becker <joelbecker@google.com>
Commit-Queue: Joel Becker <joelbecker@google.com>
Reviewed-by: Keigo Oka <oka@chromium.org>
Tested-by: Joel Becker <joelbecker@google.com>

--- a/cros-ide/views/tsconfig.json
+++ b/cros-ide/views/tsconfig.json
@@ -10,7 +10,8 @@
     "sourceMap": true,
     "rootDirs": ["src", "../src"],
     "strict": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "esModuleInterop": true
   },
   "include": [
     "src"
