--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -655,6 +655,7 @@
     "@novnc/novnc": "^1.3.0",
     "date-fns": "^2.28.0",
     "glob": "^7.1.7",
+    "is-valid-hostname": "^1.0.2",
     "js-base64": "^3.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
