cros-ide: clean up spellchecker settings
- remove flags from 'under development' section
- add a setting to enable the spellchecker (on by default)

BUG=b:217287367
TEST=manually verified that the spellchecker can be turned off

Change-Id: Ic340f3c8032ae878db01baed5deace1a97f502f3
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/3964140
Reviewed-by: Keigo Oka <oka@chromium.org>
Commit-Queue: Tomasz Tylenda <ttylenda@chromium.org>
Tested-by: Tomasz Tylenda <ttylenda@chromium.org>

--- a/cros-ide/package.json
+++ b/cros-ide/package.json
@@ -464,6 +464,11 @@
           "description": "Build system.",
           "default": "Makefile"
         },
+        "cros-ide.spellchecker": {
+          "type": "boolean",
+          "description": "Enable Tricium spellchecker. Requires a reload to take effect.",
+          "default": true
+        },
         "cros-ide.underDevelopment.chromiumBuild": {
           "type": "boolean",
           "description": "Enable build + deploy for chromium code (incomplete)",
@@ -507,16 +512,6 @@
         "cros-ide.underDevelopment.testCoverage": {
           "type": "boolean",
           "description": "Enable Test Coverage (incomplete)",
-          "default": false
-        },
-        "cros-ide.underDevelopment.triciumSpellchecker": {
-          "type": "boolean",
-          "description": "Enable Tricium Spellchecker (b/217287367).",
-          "default": true
-        },
-        "cros-ide.underDevelopment.triciumSpellcheckerForCommitMessage": {
-          "type": "boolean",
-          "description": "Spell check commit message (under development)",
           "default": false
         },
         "cros-ide.deviceManagement.devices": {
